--- a/VideoDownloaderBot.ipynb
+++ b/VideoDownloaderBot.ipynb
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/DaruaraFriends/VideoDownloaderBot/blob/main/VideoDownloaderBot.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ppproject55/VideoDownloaderBot/blob/main/VideoDownloaderBot.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -67,7 +67,7 @@
       },
       "source": [
         "!apt install ffmpeg aria2\n",
-        "!git clone https://github.com/DaruaraFriends/VideoDownloaderBot\n",
+        "!git clone https://github.com/ppproject55/VideoDownloaderBot\n",
         "%cd VideoDownloaderBot"
       ],
       "execution_count": null,
@@ -91,21 +91,21 @@
         "id": "Owqe0tPxUJbM"
       },
       "source": [
-        "%env API_ID=12345 \n",
+        "%env API_ID=16494736 \n",
         "# Get from https://my.telegram.org/apps\n",
-        "%env API_HASH=abcdef\n",
+        "%env API_HASH=2cb7fa5859e2de684e3e10d9c049621a\n",
         "# Get from https://my.telegram.org/apps\n",
-        "%env BOT_TOKEN=123:abc \n",
+        "%env BOT_TOKEN=6929337976:AAGVaqTCTxAYebSL1ITwN4yB7jzYkwP5cso \n",
         "# Get from https://t.me/BotFather\n",
-        "%env AUTH_USERS=123,456 \n",
+        "%env AUTH_USERS=5071104456 \n",
         "# User ids of those who can use bot anywhere without limit\n",
-        "%env GROUPS=123,456 \n",
+        "%env GROUPS=1004108078454 \n",
         "# Chat ids where you wan't many to use the bot\n",
-        "%env JSON_GROUPS=123,456 \n",
+        "%env JSON_GROUPS=1004108078454 \n",
         "# Chat ids where you wan't many to use the bot to download from jsons\n",
-        "%env THUMB=thumb.jpg \n",
+        "%env THUMB= \n",
         "# Url of video thumbnail. Leave to use video's thumbnail\n",
-        "%env NAME=Deshdeepak \n",
+        "%env NAME=श्री राम भक्त \n",
         "# Name to send with video"
       ],
       "execution_count": null,
